Resolves: tdf#125080 crashing adding a ref to a non-VclPtr

Change-Id: I72a0deaab3d86ac0772092ab5f60bcace7632847